examples/test/testpolicy19945.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19945
  namespace: namespace336
spec:
  podSelector:
    matchLabels:
      key36: value22
      key5: value13
      key41: value46
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key9: value16
          key38: value18
      podSelector:
        matchLabels:
          key32: value28
